# egui_logger

./: Cargo.toml
src/: ui.rs
