[package]
name = "egui_logger"
version = "0.5.0"
edition = "2021"
authors = ["Jacob <RegenJacob@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RegenJacob/egui_logger"
description = "log implementation for egui"
categories = ["gui", "game-development", "development-tools::debugging"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

[dependencies]
log = "0.4"
egui = { git = "https://github.com/emilk/egui/", rev = "f38515afe9c0b220c7a698566630c28d8f57b44f" }
regex = "1.10"

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui/", rev = "f38515afe9c0b220c7a698566630c28d8f57b44f" }
multi_log = "0.1"
env_logger = "0.11"

